--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-"Hello World" 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Luke Hodina's Software Developer Portfolio</title>
+</head>
+<body>
+    <header>
+        <nav>
+            <a href="">Home</a>
+            <a>About</a>
+            <a>Projects</a>
+            <a>Contact</a>
+        </nav>
+    </header>
+    <main></main>
+</body>
+</html>
