Add content and start styling

--- a/index.html
+++ b/index.html
@@ -4,16 +4,85 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Luke Hodina's Software Developer Portfolio</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
     <header>
         <nav>
-            <a href="">Home</a>
-            <a>About</a>
-            <a>Projects</a>
-            <a>Contact</a>
+            <a href="#skills">Skills</a>
+            <a href="#about">About</a>
+            <a href="#projects">Projects</a>
+            <a href="#contact">Contact</a>
         </nav>
     </header>
-    <main></main>
+    <main>
+        <section id="title">
+            <h1>Luke Hodina</h1>
+            <h2>Full Stack Software Developer in Chicago</h2>
+        </section>
+        <section id="skills">
+            <h2>Skills</h2>
+            <section id="skill-list-container">
+                <ul>
+                    <li>Python</li>
+                    <li>JavaScript</li>
+                    <li>Java</li>
+                    <li>React</li>
+                    <li>Express.js</li>
+                    <li>Flask</li>
+                    <li>Spring Boot</li>
+                    <li>Spring Tool Suite</li>
+                    <li>Node.js</li>
+                    <li>SQL</li>
+                    <li>MySQL</li>
+                    <li>PostgreSQL</li>
+                    <li>Sequelize</li>
+                    <li>RESTful API</li>
+                    <li>Postman</li>
+                    <li>Postbird</li>
+                    <li>MongoDB</li>
+                    <li>Jinja2</li>
+                    <li>GitHub</li>
+                    <li>Object-Oriented Programming</li>
+                    <li>Bootstrap</li>
+                    <li>CSS</li>
+                    <li>HTML</li>
+                    <li>AWS</li>
+                </ul>
+            </section>
+        </section>
+        <section id="about">
+            <h2>About</h2>
+            <section id="about-content">
+                <img id="headshot" src="./assets/me.jpg" alt="Luke Hodina's Face">
+                <section id="bio">
+                    <p id="bio-top">
+                        As a freshly-minted full stack developer, I love planning and wireframing an application, architecting the data and building out the back end, then visualizing it for the user. In my bootcamp (Coding Dojo) I found that I loved working with a team to bring a vision to life. I think I enjoy talking through a project with my team so much because I feel confident articulating complex ideas. Most of that confidence is due to my writing background.
+                    </p>
+                    <p>
+                        Just before COVID I was in New York City finishing my MFA program in fiction writing. My plan during lockdown was to put together a strong body of work for PhD programs in literature, but I found my interest in academia waning and my curiosity about software development increasing. I dabbled in Python, then started to find that, at the most basic level, I love building things and solving practical problems, even if it’s just a bite-sized experimental application. After a period of self-directed study, I enrolled in the three-stack program at Coding Dojo, and I haven’t looked back since.
+                    </p>
+                    <p>
+                        Some of my long-term interests include education, urban planning, and clean energy. In my free time, I wish I had time to make the next Stardew Valley, but I need to finish writing this novel…
+                    </p>
+                </section>
+            </section>
+        </section>
+        <section id="projects">
+            <h2>Projects</h2>
+            <h3>Movie Notebook</h3>
+            <h3>Job Hunter</h3>
+        </section>
+        <section id="contact">
+            <h2>Contact</h2>
+            <p>630.222.5831</p>
+            <p>lhodina@gmail.com</p>
+            <a href="https://github.com/lhodina" target="_blank"><img class="logo" src="./assets/github_logo.jpg" alt="GitHub Logo"></a>
+            <a href="http://www.linkedin.com/in/luke-hodina" target="_blank"><img class="logo" src="./assets/linkedin_logo.png" alt="LinkedIn Logo"></a>
+        </section>
+    </main>
+    <footer>
+        <a href="#"><img id="up-icon" src="./assets/up-icon.png" alt="Back to the Top Arrow"></a>
+    </footer>
 </body>
 </html>
